# syfco

./: .gitignore  Info.hs  LICENSE  Main.hs  Makefile  Paths_syfco.hs  README  README.md  Reader.hs  Simplify.hs  Utils.hs  stack.yaml  syfco.cabal
Data/: Binding.hs  Error.hs  Expression.hs  LTL.hs  LookupTable.hs  Specification.hs  StringMap.hs  Types.hs
Reader/: Bindings.hs  Data.hs  Error.hs  InferType.hs  Parser.hs  Prescind.hs  Sugar.hs
Reader/Parser/: Component.hs  Data.hs  Expression.hs  Global.hs  Info.hs  Utils.hs
Writer/: Data.hs  Error.hs  Eval.hs  Formats.hs  Utils.hs
Writer/Formats/: Basic.hs  Example.hs  Ltlxba.hs
examples/acaciaplus/: genbuf2.tlsf  genbuf3.tlsf  genbuf4.tlsf  genbuf5.tlsf  genbuf6.tlsf  genbuf7.tlsf  loadcomp2.tlsf  loadcomp3.tlsf  loadcomp4.tlsf  loadcomp5.tlsf  loadfull2.tlsf  loadfull3.tlsf  loadfull4.tlsf  loadfull5.tlsf  ltl2dba01.tlsf  ltl2dba02.tlsf  ltl2dba03.tlsf  ltl2dba04.tlsf  ltl2dba05.tlsf  ltl2dba06.tlsf  ltl2dba07.tlsf  ltl2dba08.tlsf  ltl2dba09.tlsf  ltl2dba10.tlsf  ltl2dba11.tlsf  ltl2dba12.tlsf  ltl2dba13.tlsf  ltl2dba14.tlsf  ltl2dba15.tlsf  ltl2dba16.tlsf  ltl2dba17.tlsf  ltl2dba18.tlsf  ltl2dba19.tlsf  ltl2dba20.tlsf  ltl2dba21.tlsf  ltl2dba22.tlsf  ltl2dba23.tlsf  ltl2dba24.tlsf  ltl2dba25.tlsf  ltl2dba26.tlsf  (+25 more)
examples/lily/: lilydemo01.tlsf  lilydemo02.tlsf  lilydemo03.tlsf  lilydemo04.tlsf  lilydemo05.tlsf  lilydemo06.tlsf  lilydemo07.tlsf  lilydemo08.tlsf  lilydemo09.tlsf  lilydemo10.tlsf  lilydemo11.tlsf  lilydemo12.tlsf  lilydemo13.tlsf  lilydemo14.tlsf  lilydemo15.tlsf  lilydemo16.tlsf  lilydemo17.tlsf  lilydemo18.tlsf  lilydemo19.tlsf  lilydemo20.tlsf  lilydemo21.tlsf  lilydemo22.tlsf  lilydemo23.tlsf  lilydemo24.tlsf
examples/parameterized/: amba_case_study.tlsf  detector.tlsf  full_arbiter.tlsf  generalized_buffer.tlsf  load_balancer.tlsf  prioritized_arbiter.tlsf  round_robin_arbiter.tlsf  simple_arbiter.tlsf
examples/parameterized/LtlNfBa/: ltl2dba_C2.tlsf  ltl2dba_E.tlsf  ltl2dba_Q.tlsf  ltl2dba_R.tlsf  ltl2dba_U1.tlsf  ltl2dba_alpha.tlsf  ltl2dba_beta.tlsf  ltl2dba_theta.tlsf  ltl2dpa_C2.tlsf  ltl2dpa_E.tlsf  ltl2dpa_Q.tlsf  ltl2dpa_R.tlsf  ltl2dpa_U1.tlsf  ltl2dpa_alpha.tlsf  ltl2dpa_beta.tlsf  ltl2dpa_theta.tlsf
misc/: git-post-commit  git-pre-commit  tlsf-mode.el
src/: Arguments.hs  Config.hs  Detection.hs  Info.hs  Main.hs  Parse.hs  Print.hs  Reader.hs  Simplify.hs  Syfco.hs  Utils.hs  Writer.hs
src/Data/: Binding.hs  Enum.hs  Error.hs  Expression.hs  Info.hs  LTL.hs  Specification.hs  StringMap.hs  SymbolTable.hs  Types.hs  Utils.hs
src/Detection/: GR1.hs  GeneralizedReactivity.hs
src/Reader/: Abstraction.hs  Bindings.hs  Data.hs  Error.hs  InferType.hs  Parser.hs  Sugar.hs
src/Reader/Parser/: Component.hs  Data.hs  Expression.hs  Global.hs  Info.hs  Utils.hs
src/Writer/: Data.hs  Error.hs  Eval.hs  Formats.hs  Modes.hs  Partition.hs  Utils.hs
src/Writer/Formats/: Acacia.hs  AcaciaSpecs.hs  Basic.hs  Bosy.hs  Example.hs  Full.hs  Lily.hs  Ltlxba.hs  Promela.hs  Psl.hs  Rabinizer.hs  Slugs.hs  SlugsIn.hs  Smv.hs  Unbeast.hs  Utf8.hs  Wring.hs
src/lib/: Config.hs  Detection.hs  Reader.hs  Simplify.hs  Syfco.hs  Utils.hs  Writer.hs
src/lib/Data/: Binding.hs  Enum.hs  Expression.hs  Info.hs  LTL.hs  Specification.hs  StringMap.hs  SymbolTable.hs  Types.hs
src/lib/Reader/: Abstraction.hs  InferType.hs  Parser.hs  Sugar.hs
src/lib/Reader/Parser/: Data.hs  Expression.hs  Info.hs
src/lib/Writer/: Data.hs  Error.hs  Eval.hs  Formats.hs  Utils.hs
src/lib/Writer/Formats/: Acacia.hs  AcaciaSpecs.hs  Basic.hs  Bosy.hs  Example.hs  Full.hs  Lily.hs  Ltl.hs  Ltlxba.hs  LtlxbaDecomp.hs  LtlxbaF.hs  Promela.hs  Psl.hs  Rabinizer.hs  Slugs.hs  SlugsIn.hs  Smv.hs  SmvDecomp.hs  Unbeast.hs  Utf8.hs  Wring.hs
src/syfco/: Arguments.hs  Info.hs
test/: amba_finite.res  amba_finite.tlsf  detector.res  detector.tlsf  lilydemo11.res  lilydemo11.tlsf  load_balancer.res  load_balancer.tlsf  robot_grid.res  robot_grid.tlsf  shift.res  shift.tlsf  simple_finite.res  simple_finite.tlsf
