name:                syfco
version:             1.2.0.4
synopsis:            Synthesis Format Conversion Tool / Library
description:         Library and tool for reading, manipulating and transforming synthesis specifications.
license:             OtherLicense
license-file:        LICENSE
author:              Felix Klein <Klein@ProjectJARVIS.de>
maintainer:          Felix Klein <klein@ProjectJARVIS.de>
stability:           stable
category:            SyntComp
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://gitlab.projectjarvis.de/tools/syfco

library

  ghc-options:
    -Wall -Wno-name-shadowing

  build-depends:
      base >=4.7 && <4.13
    , array >=0.5 && <0.6
    , containers >=0.5 && <0.7
    , mtl >=2.2 && <2.3
    , parsec >=3.1 && <3.2
    , transformers >= 0.4 && <0.6
    , convertible >= 1.1

  exposed-modules:
    Syfco

  other-modules:
    Utils
    Config
    Simplify
    Reader
    Reader.Data
    Reader.Error
    Reader.Sugar
    Reader.InferType
    Reader.Abstraction
    Reader.Bindings
    Reader.Parser
    Reader.Parser.Info
    Reader.Parser.Utils
    Reader.Parser.Expression
    Reader.Parser.Global
    Reader.Parser.Component
    Reader.Parser.Data
    Writer
    Writer.Error
    Writer.Utils
    Writer.Data
    Writer.Eval
    Writer.Formats
    Writer.Formats.Lily
    Writer.Formats.Wring
    Writer.Formats.Utf8
    Writer.Formats.Psl
    Writer.Formats.Smv
    Writer.Formats.SlugsIn
    Writer.Formats.Ltlxba
    Writer.Formats.LtlxbaDecomp
    Writer.Formats.Ltl
    Writer.Formats.Full
    Writer.Formats.Unbeast
    Writer.Formats.Acacia
    Writer.Formats.Promela
    Writer.Formats.Bosy
    Writer.Formats.Basic
    Writer.Formats.AcaciaSpecs
    Writer.Formats.Slugs
    Writer.Formats.Rabinizer
    Detection
    Detection.GeneralizedReactivity
    Data.Info
    Data.Error
    Data.StringMap
    Data.Enum
    Data.Types
    Data.Expression
    Data.Specification
    Data.SymbolTable
    Data.LTL
    Data.Binding
    Paths_syfco

  hs-source-dirs:
    src/lib

  default-language:
    Haskell2010

executable syfco

  ghc-options:
    -Wall -Wno-name-shadowing

  main-is:
    Main.hs

  build-depends:
      syfco
    , base >=4.7 && <4.13
    , directory >=1.2 && <1.4
    , parsec >=3.1 && <3.2
    , convertible >= 1.1

  other-modules:
    Arguments
    Info

  hs-source-dirs:
    src/syfco

  default-language:
    Haskell2010
