cabal-version:      >=1.10
name:               syfco
version:            1.2.1.2
license:            OtherLicense
license-file:       LICENSE
maintainer:         Felix Klein <klein@ProjectJARVIS.de>
author:             Felix Klein <Klein@ProjectJARVIS.de>
stability:          stable
synopsis:           Synthesis Format Conversion Tool / Library
description:
    Library and tool for reading, manipulating and transforming synthesis specifications.

category:           SyntComp
build-type:         Simple
extra-source-files: README.md

Test-Suite syfco-testsuite
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    Main-is:          Spec.hs
    Build-depends:    base
    default-language: Haskell2010

source-repository head
    type:     git
    location: https://github.com/reactive-systems/syfco

library
    exposed-modules:  Syfco
    hs-source-dirs:   src/lib
    other-modules:
        Utils
        Config
        Simplify
        Reader
        Reader.Data
        Reader.Error
        Reader.Sugar
        Reader.InferType
        Reader.Abstraction
        Reader.Bindings
        Reader.Parser
        Reader.Parser.Info
        Reader.Parser.Utils
        Reader.Parser.Expression
        Reader.Parser.Global
        Reader.Parser.Component
        Reader.Parser.Data
        Writer
        Writer.Error
        Writer.Utils
        Writer.Data
        Writer.Eval
        Writer.Formats
        Writer.Formats.Lily
        Writer.Formats.Wring
        Writer.Formats.Utf8
        Writer.Formats.Psl
        Writer.Formats.Smv
        Writer.Formats.SmvDecomp
        Writer.Formats.SlugsIn
        Writer.Formats.Ltlxba
        Writer.Formats.LtlxbaF
        Writer.Formats.LtlxbaDecomp
        Writer.Formats.Ltl
        Writer.Formats.Full
        Writer.Formats.Unbeast
        Writer.Formats.Acacia
        Writer.Formats.Promela
        Writer.Formats.Bosy
        Writer.Formats.Basic
        Writer.Formats.AcaciaSpecs
        Writer.Formats.Slugs
        Writer.Formats.Rabinizer
        Detection
        Detection.GeneralizedReactivity
        Data.Info
        Data.Error
        Data.StringMap
        Data.Enum
        Data.Types
        Data.Expression
        Data.Specification
        Data.SymbolTable
        Data.LTL
        Data.Binding
        Paths_syfco

    default-language: Haskell2010
    ghc-options:      -Wall -Wno-name-shadowing
    build-depends:
        base <4.16,
        array <0.6,
        containers <0.7,
        mtl <2.3,
        parsec <3.2,
        transformers <0.6,
        convertible <1.2

executable syfco
    main-is:          Main.hs
    hs-source-dirs:   src/syfco
    other-modules:
        Arguments
        Info

    default-language: Haskell2010
    ghc-options:      -Wall -Wno-name-shadowing
    build-depends:
        syfco,
        base <4.16,
        directory <1.4,
        parsec <3.2,
        convertible <1.2
